--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@tanstack/react-query": "^5.90.3",
     "@web3modal/wagmi": "^5.1.11",
-    "@zama-fhe/relayer-sdk": "^0.2.0",
+    "@zama-fhe/relayer-sdk": "^0.3.0-5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
